src/App.css
/* ... */
@media only screen and (min-width: 1001px) and (max-width: 1420px) {
  .jobs-text {
    width: 592px;
  }

  .video-container {
    height: 600px;
  }

  .header {
    margin: 64px 32px 24px 32px;
    padding: 8px 0;
  }

  .header-link {
    margin: 64px 32px 24px 32px;
    padding: 8px 0;
  }

  .header-link-content {
    padding: 8px 0;
  }

  nav img {
    width: 80%;
  }

  nav {
    margin: 0 248px 0 32px;
  }

  .nav-links-container {
    width: 340px;
  }

  .close-modal {
    font-size: 24px;
  }

  .title-tag-container p {
    font-size: 24px;
  }

  .homepage-bio {
    width: 552px;
  }

  .work-preview-wrapper {
    justify-content: flex-start;
  }

  .work-preview-info {
    flex-direction: row;
    justify-content: center;
    align-items: stretch;
  }

  .service-tag-container {
    padding: 0 32px 24px 32px;
  }

  .project-details-main {
    justify-content: flex-end;
  }

  .project-page-details-container {
    width: 552px;
  }

  .detail-info-line {
    width: 100%;
  }

  .info-data-services {
    display: none;
  }

  .info-data {
    flex: 2;
  }

  .info-data-services-mobile {
    display: block;
    flex: 2;
  }

  .container-right-global {
    padding: 0 32px;
  }

  .project-gallery-container {
    width: 100%;
  }

  .project-sidebar-container {
    width: 552px;
  }

  .project-brief-container {
    justify-content: flex-end;
  }

  .project-brief-container div {
    width: 552px;
  }

  .project-gallery-container {
    width: 552px;
    align-items: flex-end;
    grid-template-columns: repeat(1, 1fr);
  }

  .all-work-button {
    width: 552px;
  }

  .about-bio-container {
    width: 552px;
  }

  .services-container {
    width: 552px;
  }

  .services-group-container h4 {
    flex: 1;
    padding-bottom: 16px;
    font-weight: 500;
  }

  .leader-container {
    align-items: flex-start;
  }

  .leader-info-container {
    width: 552px;
  }

  .leader-info-header {
    margin: 16px 0;
  }

  .leader-image-container {
    flex: 1;
    margin-right: 40px;
    height: 500px;
  }

  .form-input {
    width: 452px;
  }

  .contact-form-info-container {
    width: 552px;
    padding-left: 12px;
  }

  .jobs-container {
    width: 100%;
  }
}

@media only screen and (min-width: 1421px) and (max-width: 1610px) {
  .header {
    margin: 64px 32px 24px 32px;
    padding: 8px 0;
  }

  .header-link {
    margin: 64px 32px 24px 32px;
    padding: 8px 0;
  }

  .header-link-content {
    padding: 8px 0;
  }

  nav img {
    width: 80%;
  }

  nav {
    margin: 0 492px 0 32px;
  }

  .nav-links-container {
    width: 240px;
  }

  .nav-links-container p {
    margin-right: 32px;
  }

  .close-modal {
    font-size: 24px;
  }

  .title-tag-container p {
    font-size: 24px;
  }

  .homepage-bio {
    width: 704px;
  }

  .work-preview-wrapper {
    justify-content: flex-start;
  }

  .work-preview-info {
    flex-direction: row;
    justify-content: center;
    align-items: stretch;
  }

  .service-tag-container {
    padding: 0 32px 24px 32px;
  }

  .project-details-main {
    justify-content: flex-end;
  }

  .project-page-details-container {
    width: 704px;
  }

  .detail-info-line {
    width: 100%;
  }

  .info-data-services {
    display: none;
  }

  .info-data {
    flex: 2;
  }

  .info-data-services-mobile {
    display: block;
    flex: 2;
  }

  .container-right-global {
    padding: 0 32px;
  }

  .project-gallery-container {
    width: 100%;
  }

  .project-sidebar-container {
    width: 704px;
  }

  .project-brief-container {
    justify-content: flex-end;
  }

  .project-brief-container div {
    width: 704px;
  }

  .project-gallery-container {
    width: 704px;
    align-items: flex-end;
  }

  .all-work-button {
    width: 704px;
  }

  .about-bio-container {
    width: 704px;
  }

  .services-container {
    width: 704px;
  }

  .services-group-container h4 {
    flex: 1;
    padding-bottom: 16px;
    font-weight: 500;
  }

  .leader-container {
    align-items: flex-start;
  }

  .leader-info-container {
    width: 704px;
  }

  .leader-info-header {
    margin: 16px 0;
  }

  .leader-image-container {
    flex: 1;
    margin-right: 40px;
    height: 900px;
  }

  .contact-form-info-container {
    width: 704px;
    padding-left: 12px;
  }

  .jobs-container {
    width: 100%;
  }
}
/* ... */

